--- a/src/components/Feature/index.css
+++ b/src/components/Feature/index.css
@@ -1,30 +1,74 @@
-.feature{
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    background-color:rgb(1, 1, 23);
-    height:425px;
-    width:425px;
-    border-radius:20px;
-    padding-bottom:50px;
+/* General Styles */
+.featurebackground {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: rgb(
+    1,
+    1,
+    23
+  ); /* Change height to auto to allow content to dictate height */
+  width: 90%; /* Adjust width to fit the screen */
+  max-width: 350px; /* Set a maximum width to prevent it from stretching too wide on larger screens */
+  border-radius: 20px;
+  padding: 10px;
+  margin: 10px auto; /* Center the element horizontally */
+  border-color: azure;
+  box-shadow: 9px;
 }
 
-.image{
-    height:250px;
-    width:200px;
-    background:transparent;
-    align-self:left;
+.image {
+  background: transparent;
+  align-self: flex-start;
+  margin: 0;
 }
-.headingcenter{
-    text-align:center;
-    font-size:30px;
-    padding-top:30px;
-    background:transparent;
+
+.headingcenter {
+  font-size: 25px;
+  background: transparent;
+  text-align: left;
+  margin-left: 10px;
+  font-weight: 400;
+  font-family: "sora";
+  color: #eee5ff;
+  margin-bottom: 10px;
 }
-.paracenter{
-    text-align:center;
-    font-size:20px;
-    padding-top:30px;
-    background:transparent;
+
+.paracenter {
+  font-size: 20px;
+  background: transparent;
+  text-align: left;
+  font-family: "outfit";
+  margin-top: 0px;
+  color: #b0aac0;
+  margin-left: 10px;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 768px) {
+  .featurebackground {
+    width: 90%;
+    max-width: 300px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .featurebackground {
+    width: 90%;
+    max-width: 250px;
+  }
+
+  .image {
+    height: 100px;
+    width: 100px;
+  }
+
+  .headingcenter {
+    font-size: 20px;
+  }
+
+  .paracenter {
+    font-size: 16px;
+  }
 }
