--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,114 +1,278 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Sora:wght@100..800&display=swap'); 
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Sora:wght@100..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+.first-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 25px;
+  margin: 20px;
+}
+.wholebg {
+  color: white;
+}
+.purchaseButton {
+  width: 200px;
+  height: 55px;
+  font-size: 15px;
+  border-radius: 10px;
+}
+.purchaseButton:hover{
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  cursor: pointer;
+}
 
-*{
-    color:white;
-    /* background-color:rgb(6, 1, 1); */
-    padding:10px;
+.content {
+  display: flex;
+  justify-content: center;
+  column-gap: 25px;
 }
-.first-row{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-between;
+.center-content {
+  padding: 50px 40px 50px 40px;
 }
-.purchaseButton{
-    background-color:white;
-    color:black;
-    border-radius:10px;
-    padding:10px;
+.left-content {
+  padding: 10px;
+  font-size: 20px;
+  font-family: "outfit";
+  color: #eee5ff;
 }
-.content{
-    display:flex;
-    flex-direction:row;
-    justify-content:center;
-    padding-top:100px;
+.centerhead {
+  width: 50vw;
+  color: #eee5ff;
+  line-height: 1.5;
+  font-family: "sora";
+  font-weight: 600;
 }
-.left-content{
-    width:100px;
-    padding-right:200px;
-    
+.yourClassName {
+  background: linear-gradient(90deg, #f87516 0%, #5e11ff 100%);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
-.center-content{
-    padding-left:40px;
-    font-family:"Outfit";
-    width:900px;
+.content-para {
+  color: #b0aac0;
+  width: 650px;
+  font-size: 20px;
+  line-height: 1.5;
+  font-family: "sora";
 }
-.centerhead{
-    font-size:60px;   
+.trusteddiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px;
 }
-h1{
-    font-size:50px;
+.headingcenter {
+  color: #eee5ff;
+  font-family: "outfit";
+  font-weight: 300;
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
 }
-.starrow{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-between;
-    margin:30px;
+.content2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 70px;
 }
-.headingcenter{
-    text-align:center;
-    font-size:30px;
-    padding-top:30px;
+.centercomb {
+  width: 700px;
+  margin-left: 20px;
 }
-.centerhead2{
-    font-size:40px; 
-    font-family:  'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+.centerhead2 {
+  color: #eee5ff;
+  font-weight: 500;
+  font-family: "sora";
+  font-size: 38px;
+  line-height: 1.5;
 }
-.purchaseButton2{
-    background-image: linear-gradient(90deg, #F87516 0%, #5E11FF 100%);
-    border-radius:10px;
-    padding:10px;
-    font-size:20px;
-    display:flex;
+.content2para {
+  font-family: "outfit";
+  color: #b4aec4;
+  font-size: 20px;
 }
-.purchaseButton2:hover{
-    background-color:transparent;
+.purchaseButton2 {
+  background-image: linear-gradient(90deg, #f87516 0%, #5e11ff 100%);
+  display: flex;
+  padding: 12px;
+  border: none;
+  cursor: pointer;
+  border-radius: 20px;
+  width: 300px;
 }
-.content2{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-between;
-    
+.purchasepara {
+  font-size: 20px;
+  color: white;
+  font-weight: 300;
+  margin: 10px;
+  font-family: "sora";
 }
-.arrowimage{
-    background-color:transparent;
+.arrowimage {
+  margin-top: 10px;
+  text-decoration: none;
 }
-.purchasepara{
-    background-color:transparent;
+.applyheading {
+  text-align: center;
+  color: #eee5ff;
+  font-weight: 400;
+  font-family: "sora";
+  font-size: 34px;
+  width: 700px;
+  margin: 40px auto 80px;
 }
-.pages{
-    display:flex;
+.pages {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-.designcenter{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    margin:30px;
-    background-color:rgb(23, 4, 60);
-    border-radius:20px;
-    padding:20px;
+.designcenter {
+  background-color: rgb(28, 8, 55);
+  margin: 30px;
+  border-radius: 30px;
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.plugincenter{
-    display:flex;
-    flex-direction:column;
-    text-align:center;
-    align-items:center;
-    width:900px;
+.supportheading {
+  font-family: "sora";
+  font-weight: 400;
+}
+.designpara {
+  font-size: 15px;
+  color: #eee5ff;
+  font-family: "outfit";
+  line-height: 1.5;
+  text-align: center;
+}
+.plugincenter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 700px;
+  margin: 80px auto 10px;
+  text-align: center;
+  line-height: 1.5;
+}
+.pluginheading {
+  font-size: 40px;
+  font-weight: 300;
+  font-family: "sora";
+  font-weight: 400;
+}
+.pluginpara {
+  width: 500px;
+  font-family: "outfit";
+  color: #b0aac0;
+}
+.featuresrow {
+  width: 80vw;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.starrow {
+  margin: 10px;
+}
+@media screen and (max-width: 768px) {
+  .purchaseButton {
+    display: none;
+  }
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .center-content {
+    width: 100%;
+    font-size: xx-large;
+    text-align: center;
+  }
+  .left-content {
+    font-size: xx-large;
+    color: #eee5ff;
+  }
+  .headingcenter {
+    text-align: center;
+  }
+  .pages {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .content2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .magic-img {
+    width: 70%;
+    margin: auto;
+  }
+}
 
-}
-.featuresrow{
-    display:flex;
-    flex-direction:row;
-    justify-content:center;
-    
-}
-.paracenter{
-    text-align:right;
-}
-.heading{
-    background-color:transparent;
-    text-align:center;
-}
-.designpara{
-    background-color:transparent;
+@media (min-width: 600px) {
+  .content {
+    flex-direction: row;
+  }
+  .starrow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
+  .left-content {
+    margin-top: 90px;
+    margin-left: 40px;
+    margin-right: 90px;
+    text-align: left;
+  }
+  .headingcenter {
+    text-align: center;
+  }
+
+  .centerhead {
+    font-size: 65px;
+    margin: 50px auto;
+  }
+
+  .content-para {
+    max-width: 100vw;
+  }
+
+  .content2 {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .centercomb {
+    max-width: 100vw;
+    margin-left: 20px;
+  }
+
+  .applyheading {
+    font-size: 50px;
+    max-width: 100vw;
+    margin: 40px auto 80px;
+  }
+
+  .pages {
+    flex-direction: row;
+  }
+
+  .pluginheading {
+    font-size: 40px;
+  }
+  .pluginpara {
+    max-width: 100vw;
+  }
+
+  .featuresrow {
+    flex-direction: row;
+  }
 }
