--- a/src/components/Pages/index.css
+++ b/src/components/Pages/index.css
@@ -1,19 +1,23 @@
-.pages2{
-    box-shadow: 2px 2px 2px;
-    background-color:#1c0539;
-    margin:40px;
-    border-radius:20px;
-   
+.pages2 {
+  box-shadow: 2px 2px 2px rgb(51, 50, 50);
+  background-color: #1c0539;
+  margin: 15px;
+  border-radius: 20px;
+  padding: 20px;
 }
-.heading{
-    font-size:30px;
-    background-color: transparent;
+.heading {
+  font-size: 30px;
+  font-family: "sora";
+  font-weight: 400;
+  background-color: transparent;
+  text-align: left;
 }
-.pagespara{
-    background-color: transparent;
-
+.pagespara {
+  background-color: transparent;
+  font-size: 20px;
+  color: #eee5ff;
+  font-family: "outfit";
 }
-.pagesimage{
-    background-color: transparent;
-
+.pagesimage {
+  background-color: transparent;
 }
