--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -16,7 +16,7 @@
   font-size: 15px;
   border-radius: 10px;
 }
-.purchaseButton:hover{
+.purchaseButton:hover {
   background-color: transparent;
   border: 1px solid white;
   color: white;
@@ -84,12 +84,14 @@
   color: #eee5ff;
   font-weight: 500;
   font-family: "sora";
-  font-size: 38px;
+  font-size: 40px;
+  text-align: center;
   line-height: 1.5;
 }
 .content2para {
   font-family: "outfit";
   color: #b4aec4;
+  text-align: center;
   font-size: 20px;
 }
 .purchaseButton2 {
@@ -175,9 +177,6 @@
   flex-direction: row;
   justify-content: center;
 }
-.starrow {
-  margin: 10px;
-}
 @media screen and (max-width: 768px) {
   .purchaseButton {
     display: none;
@@ -193,13 +192,22 @@
     font-size: xx-large;
     text-align: center;
   }
+  .centerhead {
+    width: 100%;
+  }
+  .content-para {
+    width: 100%;
+    font-size: 25px;
+  }
   .left-content {
     font-size: xx-large;
     color: #eee5ff;
   }
   .headingcenter {
     text-align: center;
+    font-size: 35px;
   }
+
   .pages {
     flex-direction: column;
     justify-content: center;
@@ -213,17 +221,20 @@
     width: 70%;
     margin: auto;
   }
-}
-
-@media (min-width: 600px) {
-  .content {
-    flex-direction: row;
+  .trusteddiv {
+    padding: 0;
   }
   .starrow {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+}
+
+@media (min-width: 600px) {
+  .content {
+    flex-direction: row;
   }
 
   .left-content {
