--- a/src/components/Starrated/index.css
+++ b/src/components/Starrated/index.css
@@ -2,12 +2,10 @@
 .starrow {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .roundimage {
-  height: 80px;
-  width: 80px;
   padding-top: 25px;
   padding-left: 10px;
 }
@@ -25,32 +23,27 @@
   color: #B3ADC3;
   font-family: "outfit";
 }
+.starrow-cards{
+  display: flex;
 
-/* Responsive Styles */
-@media screen and (max-width: 768px) {
-  .starimage {
-    max-width: 100px; /* Reduce maximum width for smaller screens */
-  }
 }
 
 @media screen and (max-width: 480px) {
   .roundimage {
-    height: 80px; /* Adjust height for smaller screens */
-    width: 80px; /* Adjust width for smaller screens */
-    padding-top: 20px;
-  }
-
-  .starimage {
-    padding-top: 30px; /* Adjust padding for smaller screens */
-    max-width: 80px; 
-  }
-
-  .score {
-    display: none; /* Hide score for smaller screens */
+    height: 200px;
+    width: 200px;
   }
   .starrow{
     display: flex;
     flex-direction: column;
+  }
+  .starimage {
+    width: 200px;
+  }
+  .starrow-cards{
+    width: 70%;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items:center
   }
