--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -74,24 +74,28 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   margin-top: 70px;
+  padding: 50px;
 }
 .centercomb {
   width: 700px;
   margin-left: 20px;
+  padding: 20px;
+}
+.magic-div{
+  padding: 20px;
 }
 .centerhead2 {
   color: #eee5ff;
   font-weight: 500;
   font-family: "sora";
   font-size: 40px;
-  text-align: center;
   line-height: 1.5;
 }
 .content2para {
   font-family: "outfit";
   color: #b4aec4;
-  text-align: center;
   font-size: 20px;
 }
 .purchaseButton2 {
@@ -120,7 +124,7 @@
   font-weight: 400;
   font-family: "sora";
   font-size: 34px;
-  width: 700px;
+  /* width: 700px; */
   margin: 40px auto 80px;
 }
 .pages {
@@ -154,8 +158,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 700px;
-  margin: 80px auto 10px;
   text-align: center;
   line-height: 1.5;
 }
@@ -187,6 +189,12 @@
     align-items: center;
     width: 100%;
   }
+  .purchaseButton2{
+    width: 70%;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+  }
   .center-content {
     width: 100%;
     font-size: xx-large;
@@ -203,11 +211,16 @@
     font-size: xx-large;
     color: #eee5ff;
   }
+  .designpara{
+    font-size: 25px;
+  }
   .headingcenter {
     text-align: center;
     font-size: 35px;
   }
-
+  .centercomb{
+    margin-bottom: 50px;
+  }
   .pages {
     flex-direction: column;
     justify-content: center;
@@ -218,17 +231,33 @@
     flex-direction: column;
   }
   .magic-img {
-    width: 70%;
+    width: 80vw;
     margin: auto;
   }
   .trusteddiv {
     padding: 0;
+  }
+  .purchasepara{
+    font-size: 30px;
+  }
+  .arrowimage{
+    margin-top: 0;
+  }
+  .content2para{
+    text-align: center;
+  }
+  .featuresrow{
+    display: flex;
+    flex-direction: column;
   }
   .starrow {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  .applyheading{
+    width: 100%;
   }
 }
 
