--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -248,6 +248,9 @@
   }
   .featuresrow{
     display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
   }
   .starrow {
